Updates done by Aleksandra Milic

--- a/src/main/resources/static/html/forgot-password.html
+++ b/src/main/resources/static/html/forgot-password.html
@@ -19,7 +19,7 @@
                 <div class="card shadow-lg o-hidden border-0 my-5">
                     <div class="card-body p-0">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 offset-xl-3">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h4 class="text-dark mb-2">Forgot Your Password?</h4>
@@ -33,7 +33,6 @@
                                     <div class="text-center"><a class="small" href="login.html">Already have an account? Login!</a></div>
                                 </div>
                             </div>
-                            <div class="col-lg-5 col-xl-6 offset-xl-0 d-none d-lg-flex"></div>
                         </div>
                     </div>
                 </div>
