--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -111,7 +111,7 @@
                                                     <div class="form-group"><label for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" placeholder="Doe" name="last_name"></div>
                                                 </div>
                                             </div>
-                                            <div class="form-group"><button class="btn btn-primary btn-sm bounce animated" type="submit">Save Settings</button></div>
+                                            <div class="form-group"><button class="btn btn-primary btn-sm bounce animated" id="testingJsonBtn" type="submit">Save Settings</button></div>
                                         </form>
                                     </div>
                                 </div>
@@ -165,6 +165,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/My-Date-Picker.js"></script>
     <script src="assets/js/theme.js"></script>
+
+
+    <!--Testing XHR, can be deleted for later -->
+    <script>
+        document.getElementById('testingJsonBtn').addEventListener('click', loadUsers);
+
+        function loadUsers(){
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET', 'https://api.github.com/users', true);
+            xhr.onload = function(){
+                if (this.status == 200){
+                    var users = JSON.parse(this.responseText);
+                    console.log(users);
+                }
+            }
+
+            xhr.send();
+        }
+    </script>
 </body>
 
 </html>
