--- a/src/main/resources/static/projectpage.html
+++ b/src/main/resources/static/projectpage.html
@@ -197,8 +197,13 @@
 
                 var html = '';
                 var projects = data;
+
+                <!--Question for Deivid -->
+                var projectsObjects = JSON.parse(data);
+
                 for(i=0; i<projects.length; i++) {
                     var project = projects[i];
+
 
                     html += '<tr>' +
                         '<td>' + project.id + '</td>' +
@@ -231,5 +236,4 @@
     });
 </script>
 </body>
-
 </html>
