--- a/src/main/resources/static/projectpage.html
+++ b/src/main/resources/static/projectpage.html
@@ -24,16 +24,17 @@
     <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0" style="background: rgb(187,190,200);">
         <div class="container-fluid d-flex flex-column p-0">
             <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="/">
-                <div class="sidebar-brand-icon rotate-n-15"><i class="icon-book-open"></i></div>
-                <div class="sidebar-brand-text mx-3"><span>ProjectBook</span></div>
+                <div class="sidebar-brand-icon rotate-n-15"></div>
+                <div class="sidebar-brand-text mx-3"><span></span></div>
             </a>
             <hr class="sidebar-divider my-0">
             <ul class="nav navbar-nav text-light" id="accordionSidebar">
                 <li class="nav-item">
                     <div class="nav-item dropdown no-arrow">
                     	<a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#" style="height: 52px;">
-                    		<img class="border rounded-circle img-profile" src="assets/img/avatars/avatar5.jpeg"><span class="d-none d-lg-inline mr-2 text-gray-600 small" style="color: rgb(255,255,255);font-size: 13.6px;border-style: none;text-align: left;margin: 0px;width: 224px;height: 52px;padding: 16px;"><strong>User&nbsp;</strong></span>
+                    		<img class="border rounded-circle img-profile" src="assets/img/avatars/avatar_pro.png"><span class="d-none d-lg-inline mr-2 text-gray-600 small" style="color: rgb(255,255,255);font-size: 13.6px;border-style: none;text-align: left;margin: 0px;width: 224px;height: 52px;padding: 16px;"><strong>USER&nbsp;</strong></span>
                     	</a>
+                        <!--
                        	<div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                        		<a class="dropdown-item" href="/user-profile"><i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
                        		<a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a>
@@ -41,11 +42,12 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>                            
                         </div>
+                        -->
                     </div>
                 </li>
                 <li class="nav-item"></li>
                 <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-tachometer-alt"></i><span>DASHBOARD</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="/user-profile"><i class="fas fa-user"></i><span>Profile</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="/user-profile"><i class="fas fa-user"></i><span>PROFILE</span></a></li>
                 <li class="nav-item"><a class="nav-link active" href="/projects"><i class="icon ion-ios-paper-outline"></i>PROJECTS<span></span></a></li>
                 <li class="nav-item"><a class="nav-link" href="/logout"><i class="far fa-user-circle"></i><span>LOGOUT</span></a></li>
                 <li class="nav-item"></li>
