Uploading second version to Heroku

--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -180,7 +180,7 @@
                                     },
                                     gridLines:{
                                         color: "#ffffff",
-                                        zeroLineColor :"#ffffff",
+                                        zeroLineColor :"#4e73df",
 
                                     },
                                     stacked: true
