--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -131,6 +131,7 @@
 	<script>
 	
 	    $(document).ready(function() {
+	        /*Getting the project data total time and total projects for remote user*/
 	        getProjectTotals(
 	            function(data) {
 	                console.log(data);                        
