--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -144,7 +144,8 @@
 	                console.log(error);
 	            });
 
-            /*Credit to the chart from https://stackoverflow.com/questions/38493564/chart-area-background-color-chartjs#:~:text=There%20is%20no%20built%2Din,JSFiddle.&text=If%20you%20want%20to%20fill,js%20plugin.*/
+            /* Total time booked for every day depicted in data
+            *Credit to the chart from https://stackoverflow.com/questions/38493564/chart-area-background-color-chartjs#:~:text=There%20is%20no%20built%2Din,JSFiddle.&text=If%20you%20want%20to%20fill,js%20plugin.*/
 	        getProjectTimeStatistics(
 	            function(data) {
 	                console.log(data);
